Changelog
=========

1.2.6 - unreleased
------------------

- XHTML minor fixes to be also XHTML Strict compliant.
  http://dev.plone.org/plone/ticket/4379
  [keul]

1.2.5 - 2009-08-01
------------------

- In the history viewlet, moved again the arrows inside a span. This is 
  needed to allow CSS style.
  [vincentfretin]

1.2.4 - 2009-07-04
------------------

- In the history viewlet, internationalized the Compare link and replaced
  icons by plain text. The revert link is now a POST button. This closes
  http://dev.plone.org/plone/ticket/9064
  [limi, vincentfretin]

1.2.3 - 2009-06-12
------------------

- Fix issue when dealing with empty version histories in history viewlet.
  [alecm]

1.2.2 - 2009-06-11
------------------

- Make ContentHistoryViewlet use new metadata only history method to
  speed up listing.
  [alecm]

- Make ContentHistoryViewlet check if context isVersionable.
  [elro]

1.2.1 - 2009-05-20
------------------

- Changed the search and author header links to respect the navigation root.
  [hannosch]

1.2 - May 16, 2009
------------------

- Filter not-interesting history entries in content history viewlet. This
  prevents an empty history viewlet from being shown.
  [wichert]

- Add a new content history viewlet which combines the full workflow history
  and content versions. Render this instead of the workflow history viewlet.
  [wichert]

- Fixed querystring in CSS validation link in viewlets/colophon.pt 
  There was an ampersand where the leading "?" should have been.
  http://dev.plone.org/plone/ticket/9054
  [siebo]

- Fixed "region-content" id twice in dashboard.pt, replaced one by "content".
  Fixes http://dev.plone.org/plone/ticket/8932
  [vincentfretin]

- Author link tag should follow same rules as byline viewlet.
  [elro]

1.2rc1 - March 20, 2009
-----------------------

- Fixed i18n in content_history template.
  There were two nested msgids and dynamic content.
  [vincentfretin]
